chore: Update docs

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "digiseg-api-client",
   "version": "0.0.0-dev",
-  "description": "OpenAPI client for Digiseg API",
+  "description": "OpenAPI client for digiseg-api-client",
   "author": "OpenAPI-Generator Contributors",
   "repository": {
     "type": "git",
@@ -12,7 +12,7 @@
     "typescript",
     "openapi-client",
     "openapi-generator",
-    "@digiseg-labs/api-client"
+    "digiseg-api-client"
   ],
   "license": "Unlicense",
   "main": "./dist/index.js",
