fix: Add provenance to write id-token

--- a/.github/workflows/npm-release.yaml
+++ b/.github/workflows/npm-release.yaml
@@ -10,6 +10,7 @@ jobs:
     permissions:
       packages: write
       contents: write
+      id-token: write
     outputs:
       version: "0.1"
     steps:
